refactorizando, adicionando un PageResponse personalizado